@@ -1,6 +1,6 @@
 Global / onChangedBuildSource := ReloadOnSourceChanges
 
-val sparkVersion = "3.5.0"
+val sparkVersion = "4.0.1"
 val sparkMajorVersion = sparkVersion.substring(0, sparkVersion.lastIndexOf("."))
 
 organization := "com.amazon.ion"
@@ -21,9 +21,9 @@ developers := List(
 moduleName := name.value
 versionScheme := Some("semver-spec")
 
-scalaVersion := "2.12.17"
-scalacOptions ++= Seq("-target:jvm-1.8", "-Xexperimental", "-deprecation", "-Xfuture")
-javacOptions ++= Seq("-source", "1.8", "-target", "1.8")
+scalaVersion := "2.13.14"
+scalacOptions ++= Seq("-release:17", "-deprecation", "-feature", "-unchecked")
+javacOptions ++= Seq("-source", "17", "-target", "17")
 
 Compile / scalaSource := baseDirectory.value / "src"
 Compile / unmanagedResourceDirectories += baseDirectory.value / "src" / "resources"
@@ -36,6 +36,11 @@ Test / javaOptions ++= Seq(
   "java.base/java.nio=ALL-UNNAMED",
   "--add-opens",
   "java.base/sun.util.calendar=ALL-UNNAMED",
+  "--add-opens",
+  "java.base/java.lang=ALL-UNNAMED",
+  "--add-opens",
+  "java.base/java.util=ALL-UNNAMED",
+  "-Djava.security.manager=allow",
   "-Dlog4j2.configurationFile=tst/log4j2.properties"
 )
 
@@ -47,10 +52,10 @@ libraryDependencies ++= Seq(
   "org.apache.spark" %% "spark-sql" % sparkVersion % Provided,
   "com.amazon.ion" % "ion-java" % "1.+",
   "com.amazon.ion" % "ion-java-path-extraction" % "1.+",
-  "org.apache.hadoop" % "hadoop-client" % "3.3.+" % Provided,
+  "org.apache.hadoop" % "hadoop-client" % "3.4.+" % Provided,
   "org.scalatest" %% "scalatest" % "3.2.+" % Test,
-  "org.scalatestplus" %% "mockito-3-4" % "3.2.+" % Test,
-  "org.scalatestplus" %% "scalacheck-1-17" % "3.2.+" % Test,
+  "org.scalatestplus" %% "mockito-5-12" % "3.2.+" % Test,
+  "org.scalatestplus" %% "scalacheck-1-18" % "3.2.+" % Test,
   // for HTML test reports
   "com.vladsch.flexmark" % "flexmark-all" % "0.64.8" % Test
 )
